--- a/index.html
+++ b/index.html
@@ -4,5 +4,16 @@
 </head>
 <body>
 <h1> OMAlbum </h1>
+
+  <img src="https://album.oma.org.ar/assets/OMAlbum-Logo-Simple.svg"/>
+  
+ <ul>
+  <li>
+    <a href="https://github.com/omalbum/omalbum-front">Repositorio frontend</a>
+  </li>
+  <li>
+    <a href="https://github.com/omalbum/omalbum-back">Repositorio backend</a>
+   </li>
+  </ul>
 </body>
 </html>
