--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <body>
 <h1> OMAlbum </h1>
 
-  <img src="https://album.oma.org.ar/assets/OMAlbum-Logo-Simple.svg"/>
+  <img src="https://album.oma.org.ar/assets/OMAlbum-Logo-Simple.svg" style="margin-left:auto;width:25%;"/>
   
  <ul>
   <li>
