subo documento del api (falta actualizar un poco)

--- a/index.html
+++ b/index.html
@@ -5,9 +5,15 @@
 <body>
 <h1> OMAlbum </h1>
 
-  <img src="https://album.oma.org.ar/assets/OMAlbum-Logo-Simple.svg" style="margin-left:auto;width:25%;"/>
+ <a href="https://album.oma.org.ar"><img src="https://album.oma.org.ar/assets/OMAlbum-Logo-Simple.svg" style="margin-left:auto;width:15%;"/></a>
   
  <ul>
+  <li>
+	<a href="./OMAlbumDocumentacionAPI.html">Documentación del API</a>
+  </li>
+  <li>
+	Documentación de la DB (to do)
+  </li>
   <li>
     <a href="https://github.com/omalbum/omalbum-front">Repositorio frontend</a>
   </li>
