--- a/index.html
+++ b/index.html
@@ -1,12 +1,36 @@
-<html>
-<head>
-<title> OMAlbum en GitHub</title>
-</head>
-<body>
+<!DOCTYPE html>
+<html lang="es">
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="utils/jquery.min.js"></script>
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
+
+		<link rel="icon" type="image/svg+xml" href="./assets/OMAlbum-Logo-Simple.svg">
+		<!--<link rel="alternate icon" href="/favicon.ico">-->
+		<link rel="mask-icon" href="./assets/OMAlbum-Logo-Simple.svg" color="#ff8a01">
+
+		<title> OMAlbum en GitHub</title>
+    </head>
+    <body>
+
+	<nav class="header-nav">
+		<span class="head">
+			<a href="https://album.oma.org.ar" style="margin: 0px; padding: 0px;">
+				<img src="https://album.oma.org.ar/assets/OMAlbum-Logo-Simple.svg">
+			</a>
+			<span class="h1">
+				<a href="https://album.oma.org.ar" style="margin: 0px; font-size: 1.5rem; align-items: center; text-decoration: none; font-family: Righteous;">
+					&nbsp;OMA<span style="color:#0096da;font-size: 1.5rem;">LBUM</span>
+				</a>
+			</span>
+		</span>
+	</nav>
+	<main>
+
 <h1> OMAlbum </h1>
 
- <a href="https://album.oma.org.ar"><img src="https://album.oma.org.ar/assets/OMAlbum-Logo-Simple.svg" style="margin-left:auto;width:15%;"/></a>
-  
+ 
  <ul>
   <li>
 	<a href="./OMAlbumDocumentacionAPI.html">Documentación del API</a>
@@ -21,5 +45,10 @@
     <a href="https://github.com/omalbum/omalbum-back">Repositorio backend</a>
    </li>
   </ul>
-</body>
+
+
+
+        </main>
+		<br/>
+    </body>
 </html>
