--- a/index.html
+++ b/index.html
@@ -28,21 +28,21 @@
 	</nav>
 	<main>
 
-<h1> OMAlbum </h1>
+<h1> Código y documentación </h1>
 
  
  <ul>
   <li>
-	<a href="./OMAlbumDocumentacionAPI.html">Documentación del API</a>
+	<a href="./OMAlbumDocumentacionAPI.html">Documentación del API</a><br>
   </li>
   <li>
-	Documentación de la DB (to do)
+	Documentación de la DB (to do)<br>
   </li>
   <li>
-    <a href="https://github.com/omalbum/omalbum-front">Repositorio frontend</a>
+    <a href="https://github.com/omalbum/omalbum-front">Repositorio frontend</a><br>
   </li>
   <li>
-    <a href="https://github.com/omalbum/omalbum-back">Repositorio backend</a>
+    <a href="https://github.com/omalbum/omalbum-back">Repositorio backend</a><br>
    </li>
   </ul>
 
