--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
  
  <ul>
   <li>
-	<a href="https://raw.githubusercontent.com/omalbum/omalbum-api-docs/main/omalbum.yaml">Documentación del API</a> (visualizar con <a href="https://petstore.swagger.io/">Swagger</a>).<br>
+	<a href="./api.html">Documentación del API</a><br>
   </li>
   <li>
 	Documentación de la DB (to do)<br>
